# qzt

./: .gitattributes  .gitignore  .run-tests-tmp.sh  .semgrepignore  .tmp_run_test.sh  .tmp_run_tests.sh  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.ja.md  README.md  SECURITY.md  deny.toml  dist-workspace.toml
.devloop/: ledger.jsonl
.github/: pull_request_template.md
.github/workflows/: ci.yml  fuzz-smoke.yml  release.yml  security.yml
.takt/: .gitignore  README.md  config.yaml  devloopd.yaml
.takt/automation/: create-product-issues.sh  full-auto-devloop.sh  staged-devloop.sh
.takt/quality-gates/: project-check.sh
.takt/workflows/: subscription-devloop.yaml
ci/: impact.py
ci/adapters/: rust.json  rust.py
ci/config/: impact.json
ci/tests/: test_impact.py
docs/: API_STABILITY.md  CLI.ja.md  CLI.md  QZI_v0.1_Sidecar_Spec.ja.md  QZI_v0.1_Sidecar_Spec.md  QZT_v0.1_Competitive_Benchmarks.ja.md  QZT_v0.1_Competitive_Benchmarks.md  QZT_v0.1_Core_Readiness.ja.md  QZT_v0.1_Core_Readiness.md  QZT_v0.1_Core_Spec.ja.md  QZT_v0.1_Core_Spec.md  QZT_v0.1_Format_Stability.md  QZT_v0.1_Memory_Guarantees.md  QZT_v0.1_Product_Counterargument.ja.md  QZT_v0.1_Product_Counterargument.md  QZT_v0.1_Release_Hardening.ja.md  QZT_v0.1_Release_Hardening.md  QZT_v0.1_Validation_Corpus.ja.md  QZT_v0.1_Validation_Corpus.md  README.md  RELEASE.ja.md  RELEASE.md  Security_CI_Playbook.ja.md  Security_CI_Playbook.md  Selective_Test_CI.ja.md  Selective_Test_CI.md
docs/benchmarks/: 2026-07-partial-decompression.md  2026-07-v0.1.md
docs/benchmarks/raw/2026-07-partial-decompression/: environment.txt
docs/benchmarks/raw/2026-07-v0.1/: environment.txt
docs/guides/: artifact-fixation.ja.md  artifact-fixation.md  attestation.md  log-preservation.ja.md  log-preservation.md  search-operations.ja.md  search-operations.md  tutorial-validation.md
docs/guides/examples/: qzt-artifact-workflow.yml  qzt-verify-alert@.service  qzt-verify.service  qzt-verify.timer
examples/: evidence_ref.rs  partial_decompression_probe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: open_verify.rs
scripts/: generate-release-workflow.sh  harden-release-workflow.awk  install-cargo-dist-linux.sh  release-build-install.yml  release-plan-install.yml
src/: benchmark.rs  cbor.rs  chunk_table.rs  chunker.rs  cli_attest.rs  cli_json.rs  corpus.rs  dense_line_index.rs  error.rs  fixed.rs  format.rs  io.rs  lib.rs  limits.rs  main.rs  primitives.rs  reader.rs  schema.rs  search.rs  sidecar.rs  skeleton.rs  writer.rs
tasks/: Phase0.ja.md  Phase0.md  Phase1.ja.md  Phase1.md  Phase10.ja.md  Phase10.md  Phase11.ja.md  Phase11.md  Phase12.ja.md  Phase12.md  Phase13.ja.md  Phase13.md  Phase14.ja.md  Phase14.md  Phase15.ja.md  Phase15.md  Phase16.ja.md  Phase16.md  Phase17.ja.md  Phase17.md  Phase18.ja.md  Phase18.md  Phase19.ja.md  Phase19.md  Phase2.ja.md  Phase2.md  Phase20.ja.md  Phase20.md  Phase21.ja.md  Phase21.md  Phase22.ja.md  Phase22.md  Phase23.ja.md  Phase23.md  Phase3.ja.md  Phase3.md  Phase4.ja.md  Phase4.md  Phase5.ja.md  Phase5.md  (+14 more)
tests/: cli_help.rs  json_output_serde_roundtrip.rs  json_roundtrip.rs  makefile_contract.rs  phase0_smoke.rs  phase10_dense_line_index.rs  phase10_document_index.rs  phase11_search.rs  phase12_ngram_planner.rs  phase13_search_report.rs  phase13_sidecar.rs  phase15_file_reader.rs  phase16_streaming_verify.rs  phase17_streaming_writer.rs  phase18_competitive_benchmark.rs  phase19_resource_governance.rs  phase1_cbor.rs  phase1_primitives.rs  phase20_public_api.rs  phase21_evidence_retrieval.rs  phase22_vectors.rs  phase23_acceptance.rs  phase23a_validation_corpus.rs  phase2_fixed.rs  phase30_public_docs.rs  phase35_docs_doc_cli.rs  phase36_search_json.rs  phase37_stdin_pack.rs  phase38_document_spans.rs  phase38_pack_docs_cli.rs  phase39_attest_cli.rs  phase3_skeleton.rs  phase41_cli_docs.rs  phase42_release_readiness.rs  phase43_distribution.rs  phase44_readme_product.rs  phase45_benchmark_publication.rs  phase46_partial_decompression.rs  phase46_tutorials.rs  phase47_oss_governance.rs  (+20 more)
tests/fixtures/: README.ja.md  README.md
tests/phase35_docs_doc_cli/: missing_errors.rs
tests/support/: benchmark_log.rs  mod.rs
tests/vectors/: README.md  corrupt_chunk_data.qzt.hex  corrupt_footer_checksum.qzt.hex  corrupt_header.qzt.hex  corrupt_noncanonical_cbor.qzt.hex  corrupt_truncated.qzt.hex  extensions.tsv  manifest.tsv  valid_c1.qzt.hex  valid_crlf.qzt.hex  valid_dense_line_index.qzt.hex  valid_document_index.qzt.hex  valid_empty.qzt.hex  valid_mixed_newline.qzt.hex  valid_multi_chunk.qzt.hex  valid_no_trailing_newline.qzt.hex  valid_utf8_multibyte.qzt.hex
