[package]
name = "qzt"
version = "0.1.0-pre.1"
edition = "2024"
rust-version = "1.87"
description = "Cold evidence container for seekable, verifiable UTF-8 text archives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/albert-einshutoin/qzt"
documentation = "https://docs.rs/qzt"
homepage = "https://github.com/albert-einshutoin/qzt"
readme = "README.md"
keywords = ["archive", "compression", "evidence", "text", "zstd"]
categories = ["compression", "encoding", "filesystem"]
publish = false
exclude = [
    ".github/",
    "fuzz/",
    "scripts/",
    "tasks/",
    "docs/QZT_v0.1_Core_Spec.md",
    "docs/QZT_v0.1_Core_Spec.ja.md",
]

[package.metadata.dist]
# `publish = false` protects crates.io, while this explicit opt-in allows
# signed-off GitHub binary releases to remain an independent distribution path.
dist = true

[package.metadata.docs.rs]
# `internal-testing` exposes hidden conformance internals and must never define
# the public docs.rs surface.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
blake3 = "1"
zstd = "0.13"

[features]
bench-compete = []
internal-testing = []

[lib]
name = "qzt"
path = "src/lib.rs"

[[bin]]
name = "qzt"
path = "src/main.rs"

[dev-dependencies]
os_pipe = "1"
proptest = "1"
serde_json = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# ---- permanent allow (rationale documented) ----
cast_precision_loss = "allow"       # metrics u64→f64; precision loss is intentional
module_name_repetitions = "allow"   # ChunkerOptions etc. naming is intentional
must_use_candidate = "allow"        # must_use on public API is applied selectively
similar_names = "allow"             # short-lived index variables in tight loops; renaming reduces clarity
missing_errors_doc = "allow"        # to be resolved in P5-4
missing_panics_doc = "allow"        # to be resolved in P5-4
# ---- temporary allow (remove after referenced issue is closed) ----
too_many_lines = "allow"            # remove after P3-2 / P4-2 / P4-3 function splits

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
