[package]
name = "qzt-fuzz"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
qzt = { path = "..", version = "=0.1.0" }

[[bin]]
name = "open_verify"
path = "fuzz_targets/open_verify.rs"
test = false
doc = false
bench = false
